# memoires-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-pytest  Dockerfile.dev  README.md  bacon.toml  docker-compose-pytest.yml  docker-compose.yml  main.py  memoires.py  prestart.sh  pyproject.toml  sqlite.ipynb  sqlite.py
.github/workflows/: build-and-deploy.yml  pytest.yml
app/: config.py  main.py
app/api/: dependencies.py  deps.py
app/api/api_v1/endpoints/: items.py  users.py
app/api/v1/: routes.py
app/api/v1/endpoints/: events.py  items.py  persons.py  photos.py
app/api/v1/schemas/: __init__.py  event.py  person.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_item.py  crud_person.py  crud_user.py  event.py  person.py
app/db/: base.py  core.py
app/events/: models.py  schemas.py  services.py  views.py
app/generic/: router.py
app/models/: __init__.py  event.py  person.py  photo.py
app/persons/models/: person_events.py
app/photos/: models.py  views.py
app/root/: models.py  views.py
app/storage/: core.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_events.py  test_persons.py
app/tests/api/v1/: test_events.py  test_persons.py  test_photos.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py  utils.py
memoires/: database.py
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250316_122609_set_datetime_to_timestampz.rs
migrations/: env.py
src/: config.rs  main.rs
src/common/: auth.rs  filter.rs  mod.rs  models.rs  pagination.rs  sort.rs  views.rs
src/events/: db.rs  mod.rs  models.rs  views.rs
src/person/: db.rs
src/person/events/: db.rs
src/photo/: db.rs
src/routes/: mod.rs
src/routes/events/: db.rs  models.rs  views.rs
src/routes/person/: db.rs
src/routes/person/events/: db.rs
src/routes/photo/: db.rs
