[package]
name = "memoires-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
axum = { version = "0.7.5" }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
# sqlx = { version = "0.7.4", features = [
#     "postgres",
#     "runtime-tokio-native-tls",
#     "macros",
#     "uuid",
#     "chrono",
#     # "sqlite",
# ], default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
hyper = "1.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.0.1"
# proj = "0.27.2"
wkt = { version = "0.11.0", features = ["serde", "geo-types"] }
geozero = { version = "0.13.0", features = ["with-postgis-sqlx"] }
geo-types = { version = "0.7.13", features = ["serde"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
sea-query = "0.31.0"
# utoipa-axum = "0.1.0-beta.2"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
wkb = "0.7.1"
byteorder = "1.5.0"
lttb = "0.2.0"
postgis = "0.9.0"
# geo = "0.28.0"
serde_with = "3.10.0"

[dev-dependencies]
reqwest = { version="0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
