[package]
name = "memoires-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.0" }
axum-keycloak-auth = "0.8.1"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
crudcrate = "0.2.3"
# crudcrate = { path = "../crudcrate" }
dotenvy = "0.15.7"
futures = "0.3.31"
gpx = "0.10.0"
hyper = "1.5.2"
migration = { path = "migration" }
rand = "0.9.0"
sea-orm = { version = "1.1.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.10.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
rstest = "0.25.0"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
tower = { version = "0.5.2", features = ["util"] }

[lints.clippy]
pedantic = "warn"
