[tool.poetry]
name = "memoires"
version = "0.1.0"
description = ""
authors = ["Evan Thomas <evan@evanjt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
