[tool.poetry]
name = "memoires"
version = "0.1.0"
description = ""
authors = ["Evan Thomas <evan@evanjt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
email-validator = "^1.2.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
minio = "^7.1.12"
python-multipart = "^0.0.5"
Pillow = "^9.2.0"
databases = "^0.6.1"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
requests = "^2.27.1"
pytest-watch = "^4.2.0"
ptw = "^1.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
