[tool.poetry]
name = "memoires-api"
version = "0.1.0"
description = "API to manage data for the memoires project"
authors = ["Evan Thomas <evan@evanjt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
fastapi = "^0.110.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
